# sferrakl

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
core/src/: lib.rs
corpus/: Cargo.toml
crates/sferrakl_corpus/: Cargo.toml
crates/sferrakl_corpus/src/: lib.rs
crates/sferrakl_corpus_cli/: Cargo.toml
crates/sferrakl_corpus_cli/src/: lib.rs
crates/sferrakl_corpus_cli_app/: Cargo.toml
crates/sferrakl_corpus_cli_app/src/: main.rs
crates/sferrakl_corpus_inspector/: Cargo.toml
crates/sferrakl_corpus_inspector/src/: main.rs
model/: Cargo.toml
model/src/: bigram.rs  corpus.rs  finger.rs  hand.rs  hand_finger.rs  key.rs  keyboard.rs  lib.rs  stats.rs  tier.rs
src/: corpus.rs  main.rs
