[package]
name = "sferrakl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["default", "std", "alloc", "derive", "rc", "serde_derive"] }
serde_json = "1.0.148"
